<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:src="@drawable/byte_image"
            android:layout_marginBottom="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/txtRegister"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/md_theme_primary"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/txtViewUser"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textViewUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/md_theme_primary"
            android:backgroundTint="@color/md_theme_secondary"
            style="@style/OutlinedRoundedBox"
            app:layout_constraintTop_toBottomOf="@id/textViewUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_primary"
                android:backgroundTint="@color/md_theme_secondary"
                android:layout_marginBottom="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/txtViewPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textViewPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginBottom="20dp"
            android:textColor="@color/md_theme_primary"
            android:backgroundTint="@color/md_theme_secondary"
            style="@style/OutlinedRoundedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/md_theme_primary"
                android:backgroundTint="@color/md_theme_secondary"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/txtConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginBottom="20dp"
            android:textColor="@color/md_theme_primary"
            android:backgroundTint="@color/md_theme_secondary"
            style="@style/OutlinedRoundedBox"
            android:id="@+id/textViewConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/md_theme_primary"
                android:backgroundTint="@color/md_theme_secondary"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnConfirm"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btnBack"
        android:textColor="@color/md_theme_primary"/>

</LinearLayout>