<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DescriptionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtViewUser"
                android:textColor="@color/md_theme_onPrimary"
                android:textStyle="bold"
                android:textSize="22dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp" />

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logout"
                android:background="?attr/selectableItemBackground"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation='horizontal'
        android:layout_below="@+id/appBarLayout"
        android:padding="6dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:id="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            app:srcCompat="@drawable/cake_24dp_ea33f7"
            android:layout_alignParentLeft="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/imageView"
            android:orientation="vertical"
            android:layout_margin="4dp"
            android:layout_toRightOf="@+id/imageView">
            <TextView
                android:id="@+id/titleDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart='16dp'
                android:layout_marginLeft='16dp'
                android:layout_marginTop='16dp'
                android:layout_below="@+id/appBarLayout"
                android:text='Id'
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/nameDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart='16dp'
                android:layout_marginLeft='16dp'
                android:layout_marginTop='16dp'
                android:layout_below="@+id/titleDescriptionTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text='Nombre'
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/typeDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart='16dp'
                android:layout_marginLeft='16dp'
                android:layout_marginTop='16dp'
                android:layout_below="@+id/nameDescriptionTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text='Tipo'
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/ppuDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart='16dp'
                android:layout_marginLeft='16dp'
                android:layout_marginTop='16dp'
                android:layout_below="@+id/typeDescriptionTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:text='PPU'
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textBetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBetter"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="48dp"
        tools:ignore="MissingConstraints"
        android:textColor="@color/md_theme_primary"
        android:layout_below="@+id/relativeLayout"
        android:textSize="25dp"
        />
    <FrameLayout

        android:id="@+id/fragmentContainerBatters"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/textBetter"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textTopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTopping"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="48dp"
        tools:ignore="MissingConstraints"
        android:textColor="@color/md_theme_primary"
        android:layout_below="@+id/fragmentContainerBatters"
        android:textSize="25dp"
        />

    <FrameLayout
        android:id="@+id/fragmentContainerTopping"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/textTopping"
        android:layout_marginTop="16dp"/>

</RelativeLayout>